optimization of seo and performance

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>test - for - abz.agency</title>
+    <meta
+      name="description"
+      content="Explore our user registration application, enabling you to register new users and fetch existing user details seamlessly."
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://test-abz-two.vercel.app/" />
   </head>
   <body>
     <div id="root"></div>
